Finalizo el resumen del primer libro (Y pruebo los diffs)

--- a/lp01.md
+++ b/lp01.md
@@ -4,3 +4,7 @@ Es un huerfano
 vive con sus tíos
 Es un crío
 Cicatriz en la frente
+
+Un día aparece alguien
+**Es un cambio para comprobar las diff en las distintas áreas**
+
