completo el resumen del segundo libro

--- a/lp02.md
+++ b/lp02.md
@@ -1,3 +1,6 @@
 #Larry Potter 2
 Resumen del segundo libro.
 Desde que en *Matrix* hubo un bug...
+
+como el malvado hacker le metion un troyano
+podría tener malwarel.
